--- a/business/src/index.css
+++ b/business/src/index.css
@@ -5,15 +5,15 @@
 
 @font-face {
   font-family: "Aeonik-Bold";
-  src: url("../public/fonts/Aeonik-Bold.otf");
+  src: url("/fonts/Aeonik-Bold.otf");
 }
 @font-face {
   font-family: "Aeonik-Regular";
-  src: url("../public/fonts/Aeonik-Regular.otf");
+  src: url("/fonts/Aeonik-Regular.otf");
 }
 @font-face {
   font-family: "Bricolage-Grotesque";
-  src: url("../public/fonts/Montserrat-Regular.ttf");
+  src: url("/fonts/Montserrat-Regular.ttf");
 }
 
 @theme {
@@ -30,6 +30,7 @@
   --color-non-veg-red: #A52A2A;
 }
 
+/* Rest */
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
