added logic to register login and verification pages

--- a/business/src/index.css
+++ b/business/src/index.css
@@ -16,18 +16,25 @@
   src: url("/fonts/Montserrat-Regular.ttf");
 }
 
+[data-sonner-toast] {
+  background-color: #10b981 !important;
+  font-family: "Aeonik-Regular" !important;
+  color: black !important;
+  border: 1px solid black !important;
+}
+
 @theme {
   --font-Aeonik-Bold: "Aeonik-Bold";
   --font-Aeonik-Regular: "Aeonik-Regular";
   --font-Montserrat-Regular: "Montserrat-Regular";
-  --color-woo-white: #F9FAFB;
-  --color-gray-what: #E5E7EB;
-  --color-light-green: #A1F7D8;
-  --color-the-green: #10B981;
-  --color-navy-blue: #1E3A8A;
+  --color-woo-white: #f9fafb;
+  --color-gray-what: #e5e7eb;
+  --color-light-green: #a1f7d8;
+  --color-the-green: #10b981;
+  --color-navy-blue: #1e3a8a;
   --color-hmm-black: #000000;
   --color-veg-green: #008000;
-  --color-non-veg-red: #A52A2A;
+  --color-non-veg-red: #a52a2a;
 }
 
 /* Rest */
